# interflop-backend-ieee

./: CMakeLists.txt  interflop_ieee.c
x86_64/: interflop_vector_ieee.c  interflop_vector_ieee_avx.h  interflop_vector_ieee_avx512.h  interflop_vector_ieee_scalar.h  interflop_vector_ieee_sse.h
